# h5pyckle

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  README.rst  REUSE.toml  justfile  pyproject.toml  requirements-dev.txt  requirements-meshmode.txt  requirements.txt  setup.cfg  setup.py
.basedpyright/: baseline.json
.ci/: environment-meshmode.yml  requirements-build.in  requirements-build.txt  requirements-meshmode.txt  requirements-test.txt
.github/: requirements-build.in  requirements-test.txt
.github/workflows/: ci.yml  codeql.yml
.reuse/: dep5
docs/: conf.py  index.rst  requirements.txt
examples/: basic.py
h5pyckle/: __init__.py  base.py  decorator.py  interop_builtins.py  interop_meshmode.py  interop_numpy.py
src/h5pyckle/: __init__.py  base.py  decorator.py  interop_builtins.py  interop_meshmode.py  interop_numpy.py
tests/: test_meshmode.py  test_pickling.py
