[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling>=1.10",
]

[project]
name = "h5pyckle"
version = "2025.10"
description = "Extensible pickling using HDF5"
readme = "README.rst"
keywords = [
    "hdf5",
    "pickle",
    "storage",
]
license = "MIT"
maintainers = [
    { name = "Alexandru Fikl", email = "alexfikl@gmail.com" },
]
authors = [
    { name = "Alexandru Fikl", email = "alexfikl@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
dependencies = [
    "h5py>=3.10",
    "numpy>=2.1",
    "typing-extensions>=4.1",
]
# NOTE: this is only here for readthedocs (keep in sync with the dependency group)
optional-dependencies.docs = [
    "sphinx>=6",
    "sphinx-autoapi",
    "sphinx-book-theme",
]
urls.Documentation = "https://h5pyckle.readthedocs.io"
urls.Repository = "https://github.com/alexfikl/h5pyckle"

[dependency-groups]
dev = [ "pyproject-fmt", "reuse", "typos", "uv" ]
test = [ "cloudpickle", "pytest", "pytest-github-actions-annotate-failures", "ruff", "ty", "unyt" ]
docs = [ "sphinx>=6", "sphinx-autoapi", "sphinx-book-theme" ]

[tool.hatch]
build.targets.wheel.packages = [
    "src/h5pyckle",
]
build.targets.sdist.exclude = [
    ".ci",
    ".github",
    "docs/build.sphinx",
]

[tool.ruff]
target-version = "py310"
line-length = 88
preview = true
lint.select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",   # flake8
    "F",   # flake8
    "FBT", # flake8-boolean-trap
    "G",   # flake8-logging-format
    "I",   # flake8-isort
    "ISC", # flake8-implicit-str-concat
    "N",   # pep8-naming
    "NPY", # numpy
    "PL",  # pylint
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RUF", # ruff
    "S",   # flake8-bandit
    "SIM", # flake8-simplify
    "TC",  # flake8-type-checking
    "UP",  # pyupgrade
    "W",   # flake8
]
lint.ignore = [
    "assert",                                    # assert
    "exec-builtin",                              # exec-builtin
    "if-else-block-instead-of-if-exp",           # use-ternary-operator
    "import-outside-top-level",                  # import-outside-top-level
    "magic-value-comparison",                    # magic-value-comparison
    "module-import-not-at-top-of-file",          # module-import-not-at-top-of-file
    "quoted-annotation",                         # quoted-annotation
    "single-line-implicit-string-concatenation", # single-line-implicit-string-concatenation
    "suspicious-pickle-import",                  # suspicious-pickle-import
    "suspicious-pickle-usage",                   # suspicious-pickle-usage
    "too-many-arguments",                        # too-many-arguments
    "too-many-locals",                           # too-many-locals
    "too-many-statements",                       # too-many-statements
]
lint.flake8-pytest-style.mark-parentheses = false
lint.flake8-quotes.docstring-quotes = "double"
lint.flake8-quotes.inline-quotes = "double"
lint.flake8-quotes.multiline-quotes = "double"
lint.isort.known-first-party = [
    "h5pyckle",
]
lint.isort.required-imports = [
    "from __future__ import annotations",
]

[tool.pytest]
ini_options.testpaths = "tests"
ini_options.addopts = [
    "-rswx",
    "--durations=25",
    "--verbose",
    "--capture=no",
]
ini_options.markers = [
    "meshmode: mark a test that uses meshmode",
]
