[metadata]
name = h5pyckle
version = 2021.1
author = Alexandru Fikl
author_email = alexfikl@gmail.com
url = https://github.com/alexfikl/h5pyckle
description = Extensible pickling using HDF5
long_description = file: README.md
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Utilities
keywords =
    storage
    hdf5

[options]
packages = find:
setup_requires =
    setuptools>=42
    wheel
install_requires =
    importlib-metadata; python_version<"3.8"
    numpy
    h5py
python_requires = ~=3.6

[options.extras_require]
dev =
    flake8
    flake8-quotes
    pep8-naming
    pylint
    pytest
fancy =
    dill

[flake8]
ignore =
    E123,
    E124,
    E126,
    E127,
    E128,
    E226,
    E402,
    W503,
    D102,
    D103
max-line-length = 88
inline-quotes = double
multiline-quotes = double

[tool:pytest]
testpaths = tests

[pylint.master]
jobs = 4
extension-pkg-whitelist=numpy
ignored-modules=matplotlib,meshmode,pyopencl

[pylint.messages_control]
disable =
    C0103,                  # invalid-name
    C0114,                  # missing-module-docstring
    C0115,                  # missing-class-docstring
    C0116,                  # missing-function-docstring
    C0411,                  # wrong-import-order
    C0413,                  # wrong-import-position
    C0415,                  # import-outside-toplevel
    E1136,                  # unsubscriptable-object
    R0801,                  # duplicate-code
    R0901,                  # too-many-ancestors
    R0903,                  # too-few-public-methods
    R0902,                  # too-many-instance-attributes
    R0912,                  # too-many-branches
    R0913,                  # too-many-arguments
    R0914,                  # too-many-locals
    R0915,                  # too-many-statements
    R1705,                  # no-else-return
    W0122,                  # exec-used
    W0511,                  # fixme
    W0603,                  # global-statement
    W0611,                  # unused-import
    W0613                   # unused-argument
