[metadata]
name = h5pyckle
version = 2021.12
description = Extensible pickling using HDF5
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/alexfikl/h5pyckle
author = Alexandru Fikl
author_email = alexfikl@gmail.com
license = MIT
license_file = LICENSES/MIT.txt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Utilities
keywords =
    storage
    hdf5

[options]
packages = find:
install_requires =
    h5py
    numpy
python_requires = >=3.8, <3.11
setup_requires =
    setuptools>=42
    wheel

[options.extras_require]
dev =
    flake8<6.0.0
    flake8-bugbear
    flake8-comprehensions
    flake8-quotes
    mypy
    pep8-naming
    pip-tools
    pylint
    pytest
    types-dataclasses
fancy =
    cloudpickle
unittest =
    unyt

[flake8]
ignore =
    E123,
    E124,
    E126,
    E127,
    E128,
    E226,
    E402,
    W503,
    D102,
    D103
max-line-length = 88
inline-quotes = double
multiline-quotes = double

[tool:pytest]
testpaths = tests
markers =
    meshmode: mark a test that uses meshmode

[pylint.master]
jobs = 4
extension-pkg-whitelist = numpy,h5py
ignored-modules = matplotlib,arraycontext,meshmode,pyopencl,pytools

[pylint.messages_control]
enable =
    I0021                   # useless-suppression
disable =
    C0103,                  # invalid-name
    C0114,                  # missing-module-docstring
    C0115,                  # missing-class-docstring
    C0116,                  # missing-function-docstring
    C0411,                  # wrong-import-order
    C0412,                  # ungrouped-imports
    C0413,                  # wrong-import-position
    C0415,                  # import-outside-toplevel
    E1136,                  # unsubscriptable-object
    R0801,                  # duplicate-code
    R0901,                  # too-many-ancestors
    R0903,                  # too-few-public-methods
    R0902,                  # too-many-instance-attributes
    R0912,                  # too-many-branches
    R0913,                  # too-many-arguments
    R0914,                  # too-many-locals
    R0915,                  # too-many-statements
    R1705,                  # no-else-return
    R1720,                  # no-else-raise
    W0122,                  # exec-used
    W0511,                  # fixme
    W0603,                  # global-statement
    W0611,                  # unused-import
    W0613                   # unused-argument

[mypy]
warn_unused_ignores = True
plugins = numpy.typing.mypy_plugin

[mypy-cloudpickle.*]
ignore_missing_imports = True

[mypy-dill.*]
ignore_missing_imports = True

[mypy-h5py.*]
ignore_missing_imports = True

[mypy-importlib_metadata.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-pyopencl.*]
ignore_missing_imports = True

[mypy-arraycontext.*]
ignore_missing_imports = True

[mypy-meshmode.*]
ignore_missing_imports = True
