[metadata]
name = h5pyckle
version = 2021.12
description = Extensible pickling using HDF5
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/alexfikl/h5pyckle
author = Alexandru Fikl
author_email = alexfikl@gmail.com
license = MIT
license_file = LICENSES/MIT.txt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Utilities
keywords =
    storage
    hdf5

[options]
packages = find:
install_requires =
    h5py
    numpy
python_requires = >=3.8
setup_requires =
    setuptools>=42
    wheel

[options.extras_require]
dev =
    mypy
    pip-tools
    pytest
    ruff
    types-dataclasses
fancy =
    cloudpickle
unittest =
    unyt

[doc8]
max-line-length = 88

[check-manifest]
ignore =
    *.yml
    *.yaml
    .reuse/*
    .ci/*
    .ctags.d/*
    .codespell-ignore

[tool:pytest]
testpaths = tests
markers =
    meshmode: mark a test that uses meshmode

[mypy]
warn_unused_ignores = True
plugins = numpy.typing.mypy_plugin

[mypy-cloudpickle.*]
ignore_missing_imports = True

[mypy-dill.*]
ignore_missing_imports = True

[mypy-h5py.*]
ignore_missing_imports = True

[mypy-importlib_metadata.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-pyopencl.*]
ignore_missing_imports = True

[mypy-arraycontext.*]
ignore_missing_imports = True

[mypy-meshmode.*]
ignore_missing_imports = True
